ch9-self: 팔로잉 끊기

--- a/practice-nodebird/views/layout.html
+++ b/practice-nodebird/views/layout.html
@@ -41,8 +41,8 @@
         {% endif %}
         </div>
         <footer>
-          Made by&nbsp;
-          <a href="https://www.zerocho.com" target="_blank">ZeroCho</a>
+          Go&nbsp;
+          <a href="http://localhost:8001/">Home</a>
         </footer>
       </div>
       {% block content %}
